ChangeLog for pommed
--------------------

version 1.27:

version 1.26:
	- pommed: only keystrokes on the built-in keyboard should reset
	the keyboard idle timer.
	- pommed: add USB IDs for the Apple external aluminium mini
	keyboard.
	- pommed: switch to sysfs resource files for PCI memory access
	instead of mmaping /dev/mem.

version 1.25:
	- pommed: check current hardware backlight level before setting AC
	or battery level. Do not act if the backlight is off.
	- pommed: do not reject the Apple Bluetooth keyboard because of
	advertised EV_ABS events.
	- pommed: fix DBus configuration snippet for newer, stricter
	version of DBus (allow clients to send messages).

version 1.24:
	- pommed: add new path for fnmode setting for 2.6.28.

version 1.23:
	- pommed: add backlight support for late 2008 laptops.
	- pommed: default to sysfs backlight driver for nVidia machines,
	with the mbp_nvidia_bl kernel driver; fall back to native
	nv8600mgt if not supported.
	- pommed: try to reconnect to DBus if DBus is not available at
	startup. Previously we would just drop it and live without DBus.

version 1.22:
	- pommed: do not probe for LMU controller on pmac machines that do
	not have a backlit keyboard. Avoids a spurious error message.
	- pommed: factor out ADB & LMU write routines, avoids duplicated
	code in the kbd_{lmu,pmu}_backlight_set() routines.
	- gpomme: add japanese translation for gpomme, courtesy of
	Nobuhiro Iwamatsu <iwamatsu@nigauri.org>.
	- pommed: use a common sysfs power class routine in power.c, add
	sysfs power class support for pmac machines.
	- pommed: added partial support for the October 2008 laptops
	(MacBook5,1, MacBookPro5,1, MacBookAir2,1), LCD backlight missing.
	- wmpomme: turn wmpomme into an event-driven dockapp, eliminating
	the fixed update rate (and, thus, wakeups). Thanks to Kalle
	A. Sandström for the prodding.

version 1.21:
	- gpomme: use compositing if available, patch by Soeren Sonnenburg.

version 1.20: